fix tufte overflow issue

--- a/tufte.css
+++ b/tufte.css
@@ -1,18 +1,15 @@
 @charset "UTF-8";
 
 /* Sidenotes, margin notes, figures, captions */
-img {
-    max-width: 100%;
-}
 
 .sidenote,
 .marginnote {
     color: blue;
     float: right;
     clear: right;
-    transform:translateX(21em);
+    transform:translateX(16rem);
     margin: 0.3rem 1rem 0 1rem;
-    width: 19em;
+    width: 14rem;
     font-size: 70%;
     line-height: 1.3;
     vertical-align: baseline;
